--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Abhi tak</li>
             <li>Abes latest</li>
             <li>elvish b hai</li>
-            <li>food </li>
+            <li>food vlogs </li>
         </ul>
     </aside>
     <main>
